Add feature table loading

--- a/examples/testing_OME_Zarr_Image.ipynb
+++ b/examples/testing_OME_Zarr_Image.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'encoding-type': 'anndata',\n",
+       " 'encoding-version': '0.1.0',\n",
+       " 'fractal_table_version': '1',\n",
+       " 'instance_key': 'label',\n",
+       " 'region': {'path': '../labels/nuclei'},\n",
+       " 'type': 'feature_table'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image.get_table_attrs(\"measurements\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
@@ -35,6 +60,30 @@
     "        if channel.label == channel:\n",
     "            return channel\n",
     "    return None "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'label1'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_dict = {\n",
+    "    \"label1\": \"some obj\",\n",
+    "    \"label2\": \"other ob\"\n",
+    "}\n",
+    "list(my_dict.keys())[0]"
    ]
   },
   {
