--- a/src/napari_ome_zarr_navigator/generate_test_data/generate_condition_table.ipynb
+++ b/src/napari_ome_zarr_navigator/generate_test_data/generate_condition_table.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,13 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# zarr_base = \"/Users/joel/shares/dataShareJoel/jluethi/Fractal/20231222_navigator_test_data/20200812-CardiomyocyteDifferentiation14-Cycle1_mip.zarr\"\n",
-    "zarr_base = \"/Users/joel/Library/CloudStorage/Dropbox/Joel/BioVisionCenter/Code/napari-ome-zarr-navigator/test_data/20231222_navigator_test_data/20200812-CardiomyocyteDifferentiation14-Cycle1_mip.zarr\"\n",
-    "# zarr_base = \"/Users/joel/Library/CloudStorage/Dropbox/Joel/BioVisionCenter/Code/napari-ome-zarr-navigator/test_data/20231222_navigator_test_data/20200812-CardiomyocyteDifferentiation14-Cycle1.zarr\"\n",
+    "zarr_base = \"/Users/joel/Documents/Code/napari-ome-zarr-navigator/test_data/10_5281_zenodo_10424292/20200812-CardiomyocyteDifferentiation14-Cycle1_mip.zarr\"\n",
     "zarr_b03 = f\"{zarr_base}/B/03/0\"\n",
     "zarr_b05 = f\"{zarr_base}/B/05/0\""
    ]
@@ -32,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -77,27 +75,27 @@
    ],
    "source": [
     "table_b03 = ad.AnnData(X=df_b03)\n",
-    "table_b05 = ad.AnnData(X=df_b03)"
+    "table_b05 = ad.AnnData(X=df_b05)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-12-22 15:24:26,390; WARNING; Unknown table type `condition`.\n"
+      "2024-05-23 15:54:20,700; WARNING; Unknown table type `condition`.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-12-22 15:24:26,509; WARNING; Setting table type to 'condition' (and overriding 'condition' attribute).\n",
-      "2023-12-22 15:24:26,510; WARNING; Unknown table type `condition`.\n"
+      "2024-05-23 15:54:20,803; WARNING; Setting table type to 'condition' (and overriding 'condition' attribute).\n",
+      "2024-05-23 15:54:20,803; WARNING; Unknown table type `condition`.\n"
      ]
     },
     {
@@ -106,7 +104,7 @@
        "<zarr.hierarchy.Group '/tables/condition'>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,6 +116,87 @@
     "\n",
     "write_table(image_group_b03, \"condition\", table_b03, overwrite=True, table_type=\"condition\", table_attrs=table_attrs)\n",
     "write_table(image_group_b05, \"condition\", table_b05, overwrite=True, table_type=\"condition\", table_attrs=table_attrs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table = ad.read_zarr(\"/Users/joel/Documents/Code/napari-ome-zarr-navigator/test_data/10_5281_zenodo_10424292/20200812-CardiomyocyteDifferentiation14-Cycle1_mip.zarr/B/03/0/tables/condition\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>row</th>\n",
+       "      <th>col</th>\n",
+       "      <th>drug</th>\n",
+       "      <th>concentration</th>\n",
+       "      <th>extra1</th>\n",
+       "      <th>extra2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>B</td>\n",
+       "      <td>03</td>\n",
+       "      <td>drug1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>example</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B</td>\n",
+       "      <td>03</td>\n",
+       "      <td>drug2</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>example</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  row col   drug concentration extra1   extra2\n",
+       "0   B  03  drug1           0.1   True  example\n",
+       "1   B  03  drug2          10.0  False  example"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table.to_df()"
    ]
   },
   {
