Update test data

--- a/src/napari_ome_zarr_navigator/generate_test_data/generate_condition_table.ipynb
+++ b/src/napari_ome_zarr_navigator/generate_test_data/generate_condition_table.ipynb
@@ -14,11 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "zarr_base = \"/Users/joel/Documents/Code/napari-ome-zarr-navigator/test_data/10_5281_zenodo_10424292/20200812-CardiomyocyteDifferentiation14-Cycle1_mip.zarr\"\n",
+    "# zarr_base = \"/Users/joel/Documents/Code/napari-ome-zarr-navigator/test_data/10_5281_zenodo_10424292/20200812-CardiomyocyteDifferentiation14-Cycle1_mip.zarr\"\n",
+    "zarr_base = \"/Users/joel/Documents/Code/napari-ome-zarr-navigator/test_data/10_5281_zenodo_10424292/20200812-CardiomyocyteDifferentiation14-Cycle1.zarr\"\n",
     "zarr_b03 = f\"{zarr_base}/B/03/0\"\n",
     "zarr_b05 = f\"{zarr_base}/B/05/0\""
    ]
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -80,22 +81,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-05-23 15:54:20,700; WARNING; Unknown table type `condition`.\n"
+      "2024-05-23 15:57:40,210; WARNING; Unknown table type `condition`.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-05-23 15:54:20,803; WARNING; Setting table type to 'condition' (and overriding 'condition' attribute).\n",
-      "2024-05-23 15:54:20,803; WARNING; Unknown table type `condition`.\n"
+      "2024-05-23 15:57:40,341; WARNING; Setting table type to 'condition' (and overriding 'condition' attribute).\n",
+      "2024-05-23 15:57:40,341; WARNING; Unknown table type `condition`.\n"
      ]
     },
     {
@@ -104,7 +105,7 @@
        "<zarr.hierarchy.Group '/tables/condition'>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,16 +121,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "table = ad.read_zarr(\"/Users/joel/Documents/Code/napari-ome-zarr-navigator/test_data/10_5281_zenodo_10424292/20200812-CardiomyocyteDifferentiation14-Cycle1_mip.zarr/B/03/0/tables/condition\")"
+    "table = ad.read_zarr(\"/Users/joel/Documents/Code/napari-ome-zarr-navigator/test_data/10_5281_zenodo_10424292/20200812-CardiomyocyteDifferentiation14-Cycle1.zarr/B/05/0/tables/condition\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -165,19 +166,10 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>B</td>\n",
-       "      <td>03</td>\n",
+       "      <td>05</td>\n",
        "      <td>drug1</td>\n",
-       "      <td>0.1</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>True</td>\n",
-       "      <td>example</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>B</td>\n",
-       "      <td>03</td>\n",
-       "      <td>drug2</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>False</td>\n",
        "      <td>example</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -186,11 +178,10 @@
       ],
       "text/plain": [
        "  row col   drug concentration extra1   extra2\n",
-       "0   B  03  drug1           0.1   True  example\n",
-       "1   B  03  drug2          10.0  False  example"
+       "0   B  05  drug1           5.0   True  example"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
